setup image less blurry + bug fix

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -36,7 +36,7 @@
 
 .about-parallax {
   /* The image used */
-  background-image: url("../../assets/setup.jpg");
+  background-image: url("../../assets/setup.jpeg");
   /* Set a specific height */
   height: 45vh;
   max-height: 600px;
